@@ -30,6 +30,7 @@ export(boot.ergoInfo)
 export(bootEGA)
 export(color_palette_EGA)
 export(dimStability)
+export(dimensionStability)
 export(dynEGA)
 export(dynEGA.ind.pop)
 export(entropyFit)
